--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "newsapi": "^2.4.1",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18"
